[package]
name = "dice-roller"
description = "Roll dice for rollplaying games from the command line!"
version = "0.1.0"
authors = ["Laura Demkowicz-Duffy <edward70891@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
structopt = "0.3.12"
thiserror = "1.0"
anyhow = "1.0"
